Fix header being behind content

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -2,3 +2,5 @@ $color-primary-white: #ffffff;
 $color-primary-pink: #d92b4c;
 
 $color-layout-background: rgba(8, 3, 37, 0.9);
+
+$z-index-header: 200;
