--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -17,6 +17,7 @@ body {
 
 	> header {
 		background-color: $color-layout-background;
+		z-index: $z-index-header;
 	}
 
 	> footer {
